# lofi-ai

./: .clang-format  CMakeLists.txt  MACOS.md  README.md
examples/: CMakeLists.txt  Makefile  mlp.cpp  mlp_bn.cpp  one_layer.cpp
lofi/: context.hpp  engine.hpp  generator.hpp  graphviz.hpp  layout.hpp  nn.hpp  storage.hpp  tensor.hpp  test_helper.hpp  util.hpp
test/: CMakeLists.txt  Makefile  test_context.cpp  test_engine.cpp  test_layout.cpp  test_storage.cpp  test_tensor.cpp
test/pytorch/: CMakeLists.txt  Makefile  make_data.py  make_tensors.py  make_tensors_bn.py  test.cpp  test_pytorch_equivalence.cpp  test_pytorch_equivalence_bn.cpp
